# factory-pattern

./: CMakeLists.txt  LICENSE  README.md  dll_support.hpp  factory.hpp  format_code.sh  main.cpp  object.cpp  object.hpp  singleton.hpp
.github/workflows/: linux_build.yml  windows_build.yml
cmake/: factoryConfig.cmake.in
include/factory/: dll_support.hpp  factory.hpp  object.hpp  singleton.hpp
